# pyasic_web

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
_settings/: __init__.py  func.py
dashboard/: __init__.py  func.py  ws.py
login/: __init__.py
miner/: __init__.py  ws.py
pyasic_web/: __init__.py  app.py  settings.py
pyasic_web/_settings/: __init__.py  web_settings.toml
pyasic_web/api/: __init__.py  auth.py  data.py  func.py  realtime.py  responses.py  v1.py
pyasic_web/auth/: __init__.py  oauth2.py  token.py  users.json  users.py
pyasic_web/dashboard/: __init__.py  func.py  ws.py
pyasic_web/errors/: __init__.py  miner.py
pyasic_web/func/: __init__.py  auth.py  cards.py  dashboard.py  miners.py  scan.py  users.py  web_settings.py  web_settings.toml
pyasic_web/login/: __init__.py
pyasic_web/miner/: __init__.py  ws.py
pyasic_web/routes/: __init__.py  dashboard.py  login.py
pyasic_web/routes/manage/: __init__.py  cards.py  miners.py  settings.py  users.py
pyasic_web/routes/miner/: __init__.py  miner.py  scan.py
pyasic_web/scan/: __init__.py  ws.py
pyasic_web/static/: luxon.js  luxon.min.js  navbar.css
pyasic_web/static/docs/: swagger.js
pyasic_web/templates/: __init__.py  dashboard.html  index.html  login.html  manage_cards.html  manage_miners.html  manage_users.html  miner.html  navbar.html  scan.html  settings.html  svg.html  toasts.html
pyasic_web/templates/cards/: __init__.py  count.html  efficiency.html  errors.html  hashrate.html  ideal_hashrate.html  max_wattage.html  pct_ideal_hashrate.html  pct_max_wattage.html  pools.html  wattage.html
pyasic_web/views/: __init__.py
pyasic_web/views/scan/: __init__.py
pyasic_web/web/: __init__.py  dashboard.py  login.py  manage.py  miner.py  scan.py  web_settings.py
scan/: __init__.py  func.py  ws.py
static/: bootstrap.min.css.map
template/: __init__.py  dashboard.html  index.html  miner.html  navbar.html
web_monitor/: __init__.py  app.py
web_monitor/_settings/: __init__.py
web_monitor/dashboard/: __init__.py  func.py  ws.py
web_monitor/miner/: __init__.py  remove.py  ws.py
web_monitor/scan/: __init__.py  func.py  ws.py
(+105 files in other folders)
